Fix double border on action columns

--- a/src/pretalx/static/common/scss/_forms.scss
+++ b/src/pretalx/static/common/scss/_forms.scss
@@ -256,11 +256,7 @@ table .form-check .radio label {
   flex-direction: row-reverse;
 }
 table .action-column {
-  display: flex;
-  justify-content: flex-end;
-  .btn {
-    margin-left: 8px;
-  }
+  text-align: right;
 }
 /* fix input group prepend look */
 .input-group-text.input-group-prepend,
